Model und Contracts in Common Lib

--- a/PizzaShop/PizzaShop.Data.Tests/PizzaShop.Data.Tests.csproj
+++ b/PizzaShop/PizzaShop.Data.Tests/PizzaShop.Data.Tests.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PizzaShop.Common\PizzaShop.Common.csproj" />
     <ProjectReference Include="..\PizzaShop.Data\PizzaShop.Data.csproj" />
   </ItemGroup>
 
