--- a/PizzaShop/PizzaShop.Data/PizzaShop.Data.csproj
+++ b/PizzaShop/PizzaShop.Data/PizzaShop.Data.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaShop.Common\PizzaShop.Common.csproj" />
+  </ItemGroup>
+
 </Project>
