--- a/PizzaShop/PizzaShop.Logic.Tests/PizzaShop.Logic.Tests.csproj
+++ b/PizzaShop/PizzaShop.Logic.Tests/PizzaShop.Logic.Tests.csproj
@@ -23,6 +23,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PizzaShop.Common\PizzaShop.Common.csproj" />
     <ProjectReference Include="..\PizzaShop.Data\PizzaShop.Data.csproj" />
     <ProjectReference Include="..\PizzaShop.Logic\PizzaShop.Logic.csproj" />
   </ItemGroup>
